<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marlen">MarLen</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="pay_text">Оплатить</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="slogan">Мы - то, что мы едим</string>
    <string name="auth_name">Софья Х.</string>
    <string name="earch_field">Поиск...</string>
    <string name="ascending">По возрастанию</string>
    <string name="categoria_milk">Молочные продукты</string>
    <string name="total_text">Итого:</string>
</resources>