<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.MainFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/header_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/green_background"
        android:gravity="center|right"
        android:paddingEnd="10dp"
        android:shadowColor="@color/shadow_effect"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="15"
        android:text="@string/marlen"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/basket_main_botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/catalog_main_botton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/catalog_icon"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/catalog"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/basket_main_botton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/basket_icon"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/basket"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalog_main_botton" />

    <TextView
        android:id="@+id/slogan_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/green_background"
        android:gravity="center"
        android:shadowColor="@color/shadow_effect"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="15"
        android:text="@string/slogan"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/footer_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_main" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/slogan_text"
        app:layout_constraintStart_toStartOf="@+id/slogan_text"
        app:layout_constraintTop_toTopOf="@+id/slogan_text"
        app:layout_constraintVertical_bias="0.07999998"
        app:srcCompat="@drawable/main_img"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/footer_main"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/green_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_text" />

    <Button
        android:id="@+id/auth_main_botton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/avatar_icon"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/auth_name"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/footer_main"
        app:layout_constraintEnd_toEndOf="@+id/footer_main"
        app:layout_constraintTop_toTopOf="@+id/footer_main" />

</androidx.constraintlayout.widget.ConstraintLayout>